--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (test
- (name test_FinalProject)
- (libraries ounit2 FinalProject))
+ (name test_stock)
+ (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))
