--- a/test/dune
+++ b/test/dune
@@ -4,4 +4,5 @@
 
 (test
  (name test_refresh)
+ (instrumentation (backend bisect_ppx))
  (libraries ounit2 FinalProject api lwt.unix bisect_ppx.runtime bisect_ppx.common))
