--- a/FinalProject.opam
+++ b/FinalProject.opam
@@ -2,8 +2,8 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name <maintainer@example.com>"]
-authors: ["Author Name <author@example.com>"]
+maintainer: ["Team80NetheriteTheta <maintainer@example.com>"]
+authors: ["Team80NetheriteTheta <author@example.com>"]
 license: "LICENSE"
 tags: ["add topics" "to describe" "your" "project"]
 homepage: "https://github.com/username/reponame"
